New LandingPage, desktop version

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -60,6 +60,32 @@
     "BrandText": "AI助力，快速移民，轻松实现美国梦",
     "Lawyer": "律师",
     "Applicant": "申请人",
+    "RequestDemo": "申请Demo",
+    "Solution": "解决方案",
+    "SolutionTitle":"自动完成移民申请工作",
+    "RealTimeCaseTracking": "实时案件跟踪",
+    "AutoDocGeneration": "自动生成所需文档",
+    "AutoDocGenerationDescription": "只需单击一下按钮，即可将申请人的原始数据转换为完善的移民文件。我们的人工智能可在几秒钟内制作量身定制的专业级申请书和支持材料。",
+    "AutoDocGenerationListItem1": "智能案件相关内容生成",
+    "AutoDocGenerationListItem2": "自动表格填写",
+    "AiInfoCollection": "AI智能信息收集",
+    "AiInfoCollectionDescription": "告别繁琐的文书工作。我们的智能表格可以实时调整，自动建议信息并捕捉错误，确保表格准确性和填写速度。",
+    "AiInfoCollectionListItem1": "智能文档填写",
+    "AiInfoCollectionListItem2": "人工智能完善表格内容",
+    "AiInfoCollectionListItem3": "实时表单完整性检查",
+    "SmartCaseManagement": "智能案件管理",
+    "SmartCaseManagementDescription": "多功能案件面板监控案件提交后进程，获取实时案件更新与前瞻预测，案件状态更新提醒，确保您的移民申请高效推进",
+    "SmartCaseManagementListItem1": "实时案件追踪和案件流程管理",
+    "SmartCaseManagementListItem2": "案件状态更新自动提醒",
+    "AiAssist": "智能AI助手",
+    "AiAssistDescription":"通过人工智能驱动的接收快速开启您的案件。我们的系统可以智能地分类并设置完美的工作流程，为您节省数小时的手动设置时间。",
+    "AiAssistDescriptionListItem1": "使用我们定制的移民法大语言模型进行即时人工智能咨询 ",
+    "AiAssistDescriptionListItem2": "专属移民案件资格分析",
+    "AiAssistDescriptionListItem3": "自动生成并打包移民文件",
+    "Features":"产品特点",
+    "FeaturesTitle":"利用AI驱动的功能提升你的实践能力",
+    "Service": "服务",
+    "CaseExpertise": "专业移民类型",
     "StableCustomers": "稳定的客户来源",
     "FastCheckout": "快速结账期，每周结算",
     "CheapServiceFee": "低廉的抽成费用",
@@ -93,6 +119,7 @@
     "TrackProgress": "随时更新",
     "TrackProgressDescription": "实时跟踪案件状态，让您的旅程更加清晰。",
     "JoinWaitingList": "加入等待名单",
+    "TryForFree": "免费试用",
     "FastTrackDescription1": "用尖端AI革新您的美国移民过程，快速实现您的美国梦。",
     "FastTrackDescription2": "<strong>专业</strong>律师然后完善信息以<strong>确保</strong>一个<strong>万无一失</strong>的申请"
   },
