--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -60,6 +60,56 @@
     "BrandText": "Fast-Track Your American Dream with AI",
     "Lawyer": "Lawyer",
     "Applicant": "Applicant",
+    "RequestDemo": "Request a Demo",
+    "Solution": "Solution",
+    "SolutionTitle": "Streamline and Automate Immigration Casework",
+    "RealTimeCaseTracking": "Real-Time Case Tracking",
+    "AutoDocGeneration": "Automated Document Generation",
+    "AutoDocGenerationDescription": "Transform applicant’s raw data into polished immigration documents at the click of a button. Our AI crafts tailored, professional-grade petitions and supporting materials in seconds.",
+    "AutoDocGenerationListItem1": "Intelligent Case-related Content Creation",
+    "AutoDocGenerationListItem2": "Automated Form Filling",
+    "AiInfoCollection": "AI-Powered Information Collection",
+    "AiInfoCollectionDescription": "Say goodbye to tedious paperwork. Our smart forms adapt in real-time, auto-suggesting information and catching errors, ensuring accuracy and speed.",
+    "AiInfoCollectionListItem1": "Smart document parsing and extraction",
+    "AiInfoCollectionListItem2": "Content refinement with AI",
+    "AiInfoCollectionListItem3": "Real-time form integrity checks",
+    "SmartCaseManagement": "Smart Case Management",
+    "SmartCaseManagementDescription": "Stay in control post-submission with our comprehensive dashboard. Get real-time updates, predictive insights, and proactive alerts to keep your cases moving forward efficiently.",
+    "SmartCaseManagementListItem1": "Real-time case tracking and case flow management",
+    "SmartCaseManagementListItem2": "Automated case status change reminder",
+    "AiAssist": "Intelligent AI Assistance",
+    "AiAssistDescription":"Jumpstart your case with AI-driven intake. Our system intelligently categorizes and sets up the perfect workflow, saving you hours of manual setup time.",
+    "AiAssistDescriptionListItem1": "Instant AI consultations with our customized immigration law LLM ",
+    "AiAssistDescriptionListItem2": "Case-Specific Eligibility Analyzer",
+    "AiAssistDescriptionListItem3": "Automatic case document package generation",
+    "Features": "Features",
+    "FeaturesTitle": "Elevate Your Practice with AI-Driven Features",
+    "FeatureInstantDocGeneration": "Instant Document Generation",
+    "FeatureInstantDocGenerationDescription": "Reduce 15+ hours of manual paperwork to mere seconds.",
+    "FeatureCasePreparation": "Accelerated Case Preparation",
+    "FeatureCasePreparationDescription": "Compress 3-4 weeks of case buildup into 2-3 hours of focused work, leveraging AI-assisted information gathering.",
+    "FeatureNoErrorDocumentation": "Error-Free Documentation",
+    "FeatureNoErrorDocumentationDescription": "Achieve 99.9% accuracy with AI-powered form filling and dual-layer error checking, minimizing RFEs.",
+    "FeatureLawyerClientInteraction": "Intelligent Lawyer-Client Interaction",
+    "FeatureLawyerClientInteractionDescription": "Reduce client queries by 75% through our Smart interaction system, saving 20+ hours per case in back-and-forth exchanges.",
+    "FeatureProfitBoost": "Significant Profit Boost",
+    "FeatureProfitBoostDescription": "Reduce case preparation time by 80%, allowing for a 3x increase in caseload without additional staff.",
+    "FeatureDataSecurity": "Fortress-Level Data Security",
+    "FeatureDataSecurityDescription": "100% cloud-based enhanced data protection and client confidentiality.",
+    "Service": "Service",
+    "CaseExpertise": "Case Expertise",
+    "FamilyImmigration": "Family based immigration",
+    "FamilyImmigrationDescription": "Marriage Green Card/Immediate Relative Petition",
+    "EmploymentImmigration": "Employment based Immigration",
+    "EmploymentImmigrationDescription": "H1B/NIW and other employment-based visas",
+    "HumanitarianImmigration": "Humanitarian based Immigration", 
+    "HumanitarianImmigrationDescription": "Asylum visa",
+    "GrowYourBusiness": "Grow Your Business with the Power of Quickimmi",
+    "ReduceCasePreparationTime": "Reduction in case preparation time",
+    "IncreaseCaseloadCapacity": "Increase in caseload capacity without additional staff",
+    "EnhanceDataProtection": "Enhanced data protection and confidentiality",
+    "StepInFutureCasework1": "Step into the Future of ",
+    "StepInFutureCasework2": "Intelligent Immigration Casework",
     "StableCustomers": "Stable source of customers",
     "FastCheckout": "Fast billing cycle, weekly settlement",
     "CheapServiceFee": "Low commission fees",
@@ -84,8 +134,6 @@
     "AiCompleteDescription": "Automatically generates accurate documents, reducing errors and saving time.",
     "AiTranslate": "Automated Form Filling",
     "AiTranslateDescription": "Simply upload documents; AI intelligently extracts relevant information to seamlessly fill in forms.",
-    "AiAssist": "AI Assistance",
-    "AiAssistDescription": "Leverage AI for precise document generation, reducing errors and saving time.",
     "ProfessionalLawyer": "Professional Lawyer",
     "ProfessionalLawyerDescription": "Professional legal reviews to ensure your documentation is flawless and compliant.",
     "TransparentPrice": "Fair Pricing",
@@ -93,6 +141,7 @@
     "TrackProgress": "Stay Updated",
     "TrackProgressDescription": "Keep tracking of case status in real-time, providing clarity throughout your journey.",
     "JoinWaitingList": "Join the waiting list",
+    "TryForFree": "Try it for free",
     "FastTrackDescription1": "Revolutionize your U.S. immigration process with cutting-edge AI, fast-tracking your American dream.",
     "FastTrackDescription2": "<strong>Professional</strong> lawyers then perfect the information to <strong>ensure</strong> a <strong>foolproof</strong> application"
   },
