--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -84,8 +84,32 @@
     "AiAssistDescriptionListItem3": "自动生成并打包移民文件",
     "Features": "产品特点",
     "FeaturesTitle": "利用AI驱动的功能提升你的实践能力",
+    "FeatureInstantDocGeneration": "即时文档生成",
+    "FeatureInstantDocGenerationDescription": "将15小时以上的手动文书工作缩短至几秒钟。",
+    "FeatureCasePreparation": "加速案件准备",
+    "FeatureCasePreparationDescription": "将3-4周的案件准备工作压缩为2-3小时的专注工作，利用AI辅助信息收集。",
+    "FeatureNoErrorDocumentation": "无差错文档",
+    "FeatureNoErrorDocumentationDescription": "通过AI驱动的表单填写和双层错误检查，实现99.9%的准确率，减少RFE（要求提供更多证据）的可能性。",
+    "FeatureLawyerClientInteraction": "智能律师-客户互动",
+    "FeatureLawyerClientInteractionDescription": "通过我们的智能互动系统减少75%的客户查询，每个案件节省超过20小时的来回交流时间。",
+    "FeatureProfitBoost": "显著的利润提升",
+    "FeatureProfitBoostDescription": "将案件准备时间减少80%，使案件处理量在不增加员工的情况下提高3倍。",
+    "FeatureDataSecurity": "堡垒级数据安全",
+    "FeatureDataSecurityDescription": "100%基于云端的增强型数据保护和客户保密性。",
     "Service": "服务",
     "CaseExpertise": "专业移民类型",
+    "FamilyImmigration": "基于家庭的移民",
+    "FamilyImmigrationDescription": "婚姻绿卡/直系亲属申请",
+    "EmploymentImmigration": "基于就业的移民",
+    "EmploymentImmigrationDescription": "H1B/国家利益豁免（NIW）及其他就业类签证",
+    "HumanitarianImmigration": "人道主义移民",
+    "HumanitarianImmigrationDescription": "庇护签证",
+    "GrowYourBusiness": "利用Quickimmi的力量发展您的业务",
+    "ReduceCasePreparationTime": "减少案件准备时间",
+    "IncreaseCaseloadCapacity": "在不增加员工的情况下提高案件处理能力",
+    "EnhanceDataProtection": "增强的数据保护和保密性",
+    "StepInFutureCasework1": "迈向未来的",
+    "StepInFutureCasework2": "智能移民案件处理",
     "StableCustomers": "稳定的客户来源",
     "FastCheckout": "快速结账期，每周结算",
     "CheapServiceFee": "低廉的抽成费用",
@@ -110,8 +134,6 @@
     "AiCompleteDescription": "自动生成所需的一切文档，省时又省心，让移民流程更加顺畅。",
     "AiTranslate": "智能表单自动填充",
     "AiTranslateDescription": "仅需上传文件，AI便能智慧抽取所需信息，轻松填写各类表单。",
-    "AiAssist": "AI协助",
-    "AiAssistDescription": "利用AI精确生成文件，减少错误并节省时间。",
     "ProfessionalLawyer": "专业律师",
     "ProfessionalLawyerDescription": "专业律师团队严格审核文件，确保无懈可击",
     "TransparentPrice": "公平定价",
