--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -93,7 +93,7 @@
     "FeatureLawyerClientInteraction": "智能律师-客户互动",
     "FeatureLawyerClientInteractionDescription": "通过我们的智能互动系统减少75%的客户查询，每个案件节省超过20小时的来回交流时间",
     "FeatureProfitBoost": "显著的利润提升",
-    "FeatureProfitBoostDescription": "将案件准备时间减少80%，案件处理量在不增加员工的情况下提高3倍",
+    "FeatureProfitBoostDescription": "将案件准备时间减少80%，使案件处理量在不增加员工的情况下提高3倍",
     "FeatureDataSecurity": "堡垒级数据安全",
     "FeatureDataSecurityDescription": "100%基于云端的增强型数据保护和客户保密性",
     "Service": "服务",
