--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -339,7 +339,7 @@
   "PersonalStatement": "个人陈述",
   "PersonalStatementInOriginalLanguage": "个人陈述（原文）",
   "ViewFormSummary": "查看表单",
-  "DisableDocDeleteButtonText": "系统生成的文件无法删除",
+  "DisableDocDeleteButtonText": "系统生成的文件或用于系统生成的文件无法在此页面删除",
 
   "IdNumber": "证件号码",
   "IdInformation": "证件信息",
