Homepage Mobile View

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -85,7 +85,7 @@
     "Features": "Features",
     "FeaturesTitle": "Elevate Your Practice with AI-Driven Features",
     "FeatureInstantDocGeneration": "Instant Document Generation",
-    "FeatureInstantDocGenerationDescription": "Reduce 15+ hours of manual paperwork to mere seconds.",
+    "FeatureInstantDocGenerationDescription": "Reduce 15+ hours of manual paperwork to mere a few seconds.",
     "FeatureCasePreparation": "Accelerated Case Preparation",
     "FeatureCasePreparationDescription": "Compress 3-4 weeks of case buildup into 2-3 hours of focused work, leveraging AI-assisted information gathering.",
     "FeatureNoErrorDocumentation": "Error-Free Documentation",
