--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -28,9 +28,12 @@
   "Use": "使用",
   "Rewrite": "重写",
   "Write your Personal Statement with AI": "人工智能自动填写",
+  "Write your Cover Letter with AI": "人工智能自动填写",
   "Please complete the previous sections before using this feature": "此功能需要先完成填写前面的信息",
   "Translate the PS on the left panel into Original Language.": "将左边内容翻译成申请人主用语",
   "AI will generate the Personal Statement based on the information provided in the previous sections.": "人工智能会根据之前填写的内容自动生成个人陈述。",
+  "AI will generate the Cover Letter based on the information provided in the previous sections.": "人工智能会根据之前填写的内容自动生成申请信。",
+
   "Discard": "放弃",
 
   "Home": "首页",
@@ -338,6 +341,7 @@
   "ViewMergedDocuments": "查看最终文件",
   "PersonalStatement": "个人陈述",
   "PersonalStatementInOriginalLanguage": "个人陈述（原文）",
+  "CoverLetter": "申请信",
   "ViewFormSummary": "查看表单",
   "DisableDocDeleteButtonText": "系统生成的文件或用于系统生成的文件无法在此页面删除",
 
