--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -17,6 +17,9 @@
   "Search": "筛选",
   "Cancel": "取消",
   "Generate Documents": "生成文件",
+  "Regenerate Documents": "重新生成文档",
+  "Automatically generate application documents based on provided information": "根据提供的信息自动生成申请文档",
+  "RegeneratingDocButtonTooltip": "重新生成文档不会包含已替换的文档。如需重新生成已替换的文档，请使用重试按钮。",
   "Generate Merged Documents": "生成最终文件",
   "UploadDocument": "上传文件",
   "CaseDocument": "附属文件",
