--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,7 +17,10 @@
   "Search": "Search",
   "Cancel": "Cancel",
   "Generate Documents": "Generate Documents",
+  "Regenerate Documents": "Regenerate Documents",
   "Generate Merged Documents": "Generate Merged Documents",
+  "Automatically generate application documents based on provided information": "Automatically generate application documents based on provided information",
+  "RegeneratingDocButtonTooltip": "Regenerating documents will not include those already replaced. To regenerate a replaced document, please use the retry button.",
   "UploadDocument": "Upload Document",
   "CaseDocument": "Case Document",
   "CaseId": "Case ID",
