Landing page UI fix

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -104,11 +104,11 @@
     "FeatureDataSecurityDescription": "100% cloud-based enhanced data protection and client confidentiality.",
     "Service": "Service",
     "CaseExpertise": "Case Expertise",
-    "FamilyImmigration": "Family based immigration",
+    "FamilyImmigration": "Family immigration",
     "FamilyImmigrationDescription": "Marriage Green Card/Immediate Relative Petition",
-    "EmploymentImmigration": "Employment based Immigration",
+    "EmploymentImmigration": "Employment Immigration",
     "EmploymentImmigrationDescription": "H1B/NIW and other employment-based visas",
-    "HumanitarianImmigration": "Humanitarian based Immigration",
+    "HumanitarianImmigration": "Humanitarian Immigration",
     "HumanitarianImmigrationDescription": "Asylum visa",
     "GrowYourBusiness": "Grow Your Business with the Power of Quickimmi",
     "ReduceCasePreparationTime": "Reduction in case preparation time",
