--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -19,6 +19,8 @@
   "Generate Documents": "Generate Documents",
   "Regenerate Documents": "Regenerate Documents",
   "Generate Merged Documents": "Generate Merged Documents",
+  "Complete Review": "Complete Review",
+  "Download All": "Download All",
   "Automatically generate application documents based on provided information": "Automatically generate application documents based on provided information",
   "RegeneratingDocButtonTooltip": "Regenerating documents will not include those already replaced. To regenerate a replaced document, please use the retry button.",
   "UploadDocument": "Upload Document",
