Home page CSS change.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -50,7 +50,7 @@
   "PrivacyPolicy": "Privacy Policy",
   "ImmigrationWebsite": "Immigration website",
   "Compare": "Compare",
-  "Login": "Log in",
+  "Login": "Login",
   "SignUp": "Sign up",
   "Doesn't have account?": "Doesn't have account?",
   "Contact contact@quickimmi.ai to sign up": "Email contact@quickimmi.ai to sign up.",
@@ -149,7 +149,7 @@
     "TrackProgress": "Stay Updated",
     "TrackProgressDescription": "Keep tracking of case status in real-time, providing clarity throughout your journey.",
     "JoinWaitingList": "Join the waiting list",
-    "TryForFree": "Try it for free",
+    "TryForFree": "Try for free",
     "FastTrackDescription1": "Revolutionize your U.S. immigration process with cutting-edge AI, fast-tracking your American dream.",
     "FastTrackDescription2": "<strong>Professional</strong> lawyers then perfect the information to <strong>ensure</strong> a <strong>foolproof</strong> application"
   },
