--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -610,6 +610,293 @@
   "Select a country": "选择一个国家",
   "Select a city": "选择一个城市",
   "Select a state": "选择一个州",
+  "RelationshipWithPetitioner": "与申请人的关系（您是申请人，您的亲属是受益人）",
+  "FillingPetitionFor": "我正在为我的（仅选择一个框）提交此申请：",
+  "Spouse": "配偶",
+  "BrotherSister": "兄弟/姐妹",
+  "DescribeYourRelationship": "如果您正在为您的子女或父母提交此申请，请选择描述您关系的框（仅选择一个框）：",
+  "ChildBornInWedlock": "子女在父母结婚时出生",
+  "StepchildAndStepparent": "继子女/继父母",
+  "ChildNotBornInWedlock": "子女在父母未结婚时出生",
+  "ChildAdopted": "子女被收养（不是孤儿或海牙公约收养者）",
+  "SiblingRelationship": "如果受益人是您的兄弟/姐妹，您是否通过收养关系？",
+  "SiblingAdoptionRelationYes": "是",
+  "SiblingAdoptionRelationNo": "否",
+  "GainedLegalStatusThroughAdoption": "您是否通过收养获得合法永久居民身份或公民身份？",
+  "GainedStatusThroughAdoptionYes": "是",
+  "GainedStatusThroughAdoptionNo": "否",
+
+  "AboutYou": "关于您（申请人）的信息",
+  "ARN": "外国人注册号码（A-Number）",
+  "SocialSecurityNumber": "美国社会安全号码（如果有）",
+
+  "YourFullName": "您的全名",
+  "FamilyName": "姓",
+  "Given Name": "名",
+  "NamesUsedBeforeLabel(Pending due to data type changed to array)": "曾用名（如果有）",
+  "Provide all other names used": "提供您曾用过的所有其他名字，包括别名、婚前姓氏和昵称。",
+  "CityOfBirth": "出生城市/镇/村",
+  "CountryOfBirth": "出生国家",
+  "DateOfBirth": "出生日期（mm/dd/yyyy）",
+
+  "Sex": "性别",
+
+  "MailingAddress": "邮寄地址",
+  "InCareOfNameofMailingAddress": "收件人姓名",
+  "StreetNumberAndName": "街道号码和名称",
+  "ApartmentNumber(Add check to apt/ste/flr)Apt": "公寓",
+  "ApartmentNumber(Add check to apt/ste/flr)Ste": "套房",
+  "ApartmentNumber(Add check to apt/ste/flr)Flr": "楼层",
+  "MailingCityOrTown": "城市或镇",
+  "MailingState": "州",
+  "MailingZioCode": "邮政编码",
+  "MailingProvince": "省",
+  "MailingPostalCode": "邮政编码",
+  "MailingCountry": "国家",
+  "MailingAddressSameAsPhysicalAddress": "您的当前邮寄地址是否与您的实际地址相同？",
+  "MailingAddressSameAsPhysicalAddressYes": "是",
+  "MailingAddressSameAsPhysicalAddressNo": "否",
+
+  "AnswerNoForItem11": "如果您对第11项回答“否”，请在第12.a. - 13.b.项中提供您的实际地址信息。",
+
+  "AddressHistory": "地址历史",
+  "PgysicalAddressHistory": "提供您过去五年的实际地址，无论是在美国境内还是境外。首先提供您的当前地址，如果它与第10.a. - 10.i.项中的邮寄地址不同。",
+  "PhysicalAddress1": "实际地址1",
+  "DateFrom": "起始日期（mm/dd/yyyy）",
+  "DateTo": "结束日期（mm/dd/yyyy）",
+  "Physical Address 2": "实际地址2",
+
+  "MaritalInformation": "您的婚姻信息",
+  "HowManyTimesHaveYouBeenMarried": "您结过几次婚？",
+  "CurrentMaritalStatus": "当前婚姻状况",
+  "SingleNeverMarried": "单身，从未结婚",
+  "DateOfCurrentMarriage": "当前婚姻日期（如果目前已婚）（mm/dd/yyyy）",
+  "PlaceofYourCurrentMarriage(if married)": "当前婚姻地点（如果已婚）",
+  "CityorTownOfCurrentMarriage": "城市或镇",
+  "StateOfCurrentMarriage": "州",
+  "ProvinceOfCurrentMarriage": "省",
+  "CountryOfCurrentMarriage": "国家",
+  "Names of All Your Spouses": "您所有配偶的名字（如果有）",
+  "SpousesInformation": "首先提供您当前配偶的信息（如果目前已婚），然后列出您所有的前配偶（如果有）。",
+  "Spouse1": "配偶1",
+  "DateMarriageEnded": "婚姻结束日期（mm/dd/yyyy）",
+  "Spouse2": "配偶2",
+
+  "InformationAboutYourParents": "关于您父母的信息",
+  "Parent 1": "父母1的信息",
+  "Full Name of Parent 1": "父母1的全名",
+  "CityOfResidence": "居住城市/镇/村",
+  "CountryOfResidence": "居住国家",
+  "Parent 2": "父母2的信息",
+  "Full Name of Parent 2": "父母2的全名",
+
+  "AdditionalInformationAboutPetitioner": "关于您（申请人）的其他信息",
+  "IAmA": "我是（仅选择一个框）：",
+  "USCitizen": "美国公民",
+  "LawfulPermanentResident": "合法永久居民",
+  "IfU.S.CitizenCompleteItemNumber37.": "如果您是美国公民，请完成第37项。",
+  "CitizenshipThrough": "我的公民身份通过以下方式获得（仅选择一个框）：",
+  "BirthInUS": "在美国出生",
+  "Natualization": "归化",
+  "Parents": "父母",
+  "ObtainedCertificate": "您是否获得了归化证书或公民证书？",
+  "ObtainedCertificateYes": "是",
+  "ObtainedCertificateNo": "否",
+  "YesForItem38": "如果您对第38项回答“是”，请完成以下内容：",
+  "CertificationNumber": "证书号码",
+  "PlaceOfIssuance": "签发地点",
+  "DateOfIssuance": "签发日期（mm/dd/yyyy）",
+  "LawfulPermanentResidentToComplete": "如果您是合法永久居民，请完成第40.a. - 41.项。",
+  "ClassOfAdmission": "入境类别",
+  "DateOfAdmission": "入境日期（mm/dd/yyyy）",
+  "PlaceOfAdmission": "入境地点",
+  "PlaceOfAdmissionCity": "城市或镇",
+  "PlaceOfAdmissionState": "州",
+  "GainedStatusThroughMarriage": "您是否通过与美国公民或合法永久居民结婚获得合法永久居民身份？",
+  "GainedStatusThroughMarriageYes": "是",
+  "GainedStatusThroughMarriageNo": "否",
+
+  "Employment History": "就业历史",
+  "ProvideEmploymentHistory": "提供您过去五年的就业历史，无论是在美国境内还是境外。首先提供您的当前就业情况。如果您目前失业，请在第42项中填写“失业”。",
+  "Employer1": "雇主1",
+  "NameOfEmployer": "雇主/公司名称",
+  "Employer2": "雇主2",
+
+  "BiographicInformation": "传记信息",
+  "BiographicInformationNote": "注意：提供关于您的传记信息，申请人。",
+  "EthinicitySelectOne": "种族（仅选择一个框）",
+  "HispanicOrLatino": "西班牙裔或拉丁裔",
+  "NotHispanicOrLatino": "非西班牙裔或拉丁裔",
+  "RaceSelectAllApplicable": "种族（选择所有适用的框）",
+  "White": "白人",
+  "Asian": "亚洲人",
+  "Black": "黑人或非洲裔美国人",
+  "AmericanIndian": "美洲印第安人或阿拉斯加土著",
+  "NativeHawaiian": "夏威夷土著或其他太平洋岛民",
+  "Height": "身高",
+  "HeightFeet": "英尺",
+  "HeightInches": "英寸",
+  "Weight": "体重",
+  "WeightPounds(Need to update with three digits)": "磅",
+  "EyeColor": "眼睛颜色（仅选择一个框）",
+  "EyeColorBlack": "黑色",
+  "Blue": "蓝色",
+  "Brown": "棕色",
+  "Gray": "灰色",
+  "Green": "绿色",
+  "Hazel": "淡褐色",
+  "Maroon": "栗色",
+  "Pink": "粉色",
+  "Unknown": "未知/其他",
+  "HairColor": "头发颜色（仅选择一个框）",
+  "Bald": "秃头（无头发）",
+  "Blonde": "金色",
+  "Red": "红色",
+  "Sandy": "沙色",
+
+  "InformationAboutBeneficiary": "关于受益人的信息",
+  "Beneficiary's Full Name": "受益人的全名",
+  "NamesUsedBeforeOfBeneficiary": "曾用名（如果有）",
+  "Provide all other names Beneficiary used": "提供受益人曾用过的所有其他名字，包括别名、婚前姓氏和昵称。",
+  "OtherInformationAboutBeneficiary": "关于受益人的其他信息",
+  "AnyoneFiledAPetitionForBeneficiary": "是否有人曾为受益人提交过申请？",
+  "AnyoneFiledAPetitionForBeneficiaryYes": "是",
+  "AnyoneFiledAPetitionForBeneficiaryNo": "否",
+  "AnyoneFiledAPetitionForBeneficiaryUnknown": "未知",
+  "NoteOfAnyoneFiledAPetitionForBeneficiary": "注意：仅在您不知道且受益人也不知道是否有人曾为受益人提交过申请时选择“未知”。",
+  "Beneficiary's Physical Address": "受益人的实际地址",
+  "Beneficiary's Physical Address Note": "如果受益人住在美国境外且没有街道号码或名称，请将第11.a.和11.b.项留空。",
+  "Other Address and Contact Information": "其他地址和联系信息",
+  "Other Address and Contact Information Note1": "提供受益人在美国的预期居住地址，如果与第11.a. - 11.h.项不同。如果地址相同，请在第12.a.项中填写“SAME”。",
+  "Other Address and Contact Information Note2": "提供受益人在美国境外的地址，如果与第11.a. - 11.h.项不同。如果地址相同，请在第13.a.项中填写“SAME”。",
+  "DaytimeTelephoneNumberIfAny": "白天电话号码（如果有）",
+  "EmailAddress": "电子邮件地址（如果有）",
+  "Beneficiary'sMaritalInformation": "受益人的婚姻信息",
+  "HowManyTimesHasTheBeneficiaryBeenMarried": "受益人结过几次婚？",
+  "PlaceofBeneficiary'sCurrentMarriage(if married)": "受益人当前婚姻地点（如果已婚）",
+  "Names of Beneficiary's Spouses": "受益人的配偶名字（如果有）",
+  "Beneficiary'sSpousesInformation": "首先提供受益人当前配偶的信息（如果目前已婚），然后列出受益人的所有前配偶（如果有）。",
+
+  "Beneficiary'sFamilyInformation": "关于受益人家庭的信息",
+  "NotesOfBeneficiary'sFamilyInformation": "提供受益人的配偶和子女的信息。",
+  "Person1": "人员1",
+  "Person2": "人员2",
+  "Person3": "人员3",
+  "Person4": "人员4",
+  "Person5": "人员5",
+  "Beneficiary's Entry Information": "受益人的入境信息",
+  "WasBeneficiaryEVERInUS": "受益人是否曾经在美国？",
+  "WasBeneficiaryEVERInUSYes": "是",
+  "WasBeneficiaryEVERInUSYNo": "否",
+  "IfTheBeneficiaryIsInUS": "如果受益人目前在美国，请填写第46.a. - 46.d.项。",
+  "BeneficiaryArrivedAs": "他或她以何种身份入境（入境类别）：",
+  "FormI-94Arrival-DepartureRecordNumber": "I-94表格入境-离境记录号码",
+  "DateOfArrival": "入境日期（mm/dd/yyyy）",
+  "StatusOfDateAuthorizedStay": "I-94或I-95表格上显示的授权停留到期日期（mm/dd/yyyy）或填写“D/S”表示身份有效期",
+  "CountryOfIssuanceForPassportOrTravelDocument": "护照或旅行证件的签发国家",
+  "ExpirationDateForPassportOrTravelDocument": "护照或旅行证件的到期日期（mm/dd/yyyy）",
+
+  "Beneficiary'sEmployment": "受益人的就业信息",
+  "ProvideBeneficiary'sCurrentEmploymentInformation": "提供受益人当前的就业信息（如适用），即使他们在美国以外的地方就业。如果受益人目前失业，请在第51.a.项中填写“失业”。",
+  "NameOfCurrentEmployer": "当前雇主的名称（如适用）",
+  "DateEmploymentBegan": "就业开始日期（mm/dd/yyyy）",
+  "AdditionalInformationAboutBeneficiary": "关于受益人的其他信息",
+  "WasBeneficiaryEVERInImmigrationProceedings": "受益人是否曾经参加过移民程序？",
+  "IfAnsweredYesSelectType": "如果回答“是”，请选择程序类型并提供程序的地点和日期。",
+  "Removal": "驱逐",
+  "Exclusion/Deportation": "排除/驱逐",
+  "Rescission": "撤销",
+  "Other Judicial Proceedings": "其他司法程序",
+  "DateInImmigrationProceedings": "日期（mm/dd/yyyy）",
+
+  "Beneficiary'sNativeWrittenLanguageDoesNotUseRomanLetters": "如果受益人的母语书写系统不使用罗马字母，请用其母语书写他的名字和外国地址。",
+  "FilingForSpouse": "如果为配偶提交申请，请提供你们共同居住的最后一个地址。如果从未共同居住，请在第59.a.项中填写“从未共同居住”。",
+  "BeneficiaryWillApplyForAdjustment": "受益人在美国，并将在美国公民及移民服务局（USCIS）办公室申请调整身份为合法永久居民：",
+  "BeneficiaryWillNotApplyForAdjustment": "受益人不会在美国申请调整身份，但他或她将在以下美国大使馆或领事馆申请移民签证：",
+  "NoteOfBeneficiaryApplication": "注意：选择受益人最后居住国以外的美国大使馆或领事馆并不保证其会接受受益人的案件处理。在这种情况下，指定的美国大使馆或领事馆有权决定是否接受受益人的案件。",
+
+  "OtherInformation": "其他信息",
+  "FiledPetitionBefore": "你是否曾经为此受益人或其他任何外国人提交过申请？",
+  "FiledPetitionBeforeYes": "是",
+  "FiledPetitionBeforeNo": "否",
+  "AnsweredYes": "如果回答“是”，请提供姓名、地点、提交日期和结果。",
+  "DateFiled": "提交日期（mm/dd/yyyy）",
+  "Result": "结果（例如，批准、拒绝、撤回）",
+  "SubmitPetitionsForOtherRelatives": "如果你也为其他亲属提交了单独的申请，请提供每个亲属的姓名和你们的关系。",
+  "Relative1": "亲属1",
+  "Relative2": "亲属2",
+
+  "WARNING": "警告：美国公民及移民服务局（USCIS）会调查所声称的关系并验证你提交的文件的有效性。如果你伪造家庭关系以获得签证，USCIS可能会寻求对你进行刑事起诉。",
+  "PENALTIES": "处罚：根据法律，如果你为了规避任何美国移民法而签订婚姻合同，你可能会被判处最高5年的监禁或罚款250,000美元，或两者兼施。此外，如果你在提交此申请时故意和故意伪造或隐瞒重要事实或使用任何虚假文件，你可能会被判处最高5年的监禁或罚款10,000美元，或两者兼施。",
+
+  "Petitioner'sStatementContactInformationeclarationSignature": "申请人的声明、联系信息、声明和签名",
+  "NoteOfPetitioner": "注意：在填写此部分之前，请阅读I-130表格说明书中的处罚部分。",
+  "Petitioner'sStatement": "申请人的声明",
+  "NoteOfPetitioner'sStatement": "注意：选择第1.a.或1.b.项的框。如果适用，请选择第2项的框。",
+  "Petitioner'sStatementOption1a": "我能读懂并理解英语，并且我已阅读并理解此申请表上的每个问题和说明以及我对每个问题的回答。",
+  "Petitioner'sStatementOption1b": "第7部分中指定的翻译人员用我流利的语言向我朗读了此申请表上的每个问题和说明以及我对每个问题的回答。我理解所有这些翻译的信息。",
+  "PreparerName": "根据我的要求，第8部分中指定的准备人根据我提供或授权的信息为我准备了此申请。",
+
+  "Petitioner'sContactInformation": "申请人的联系信息",
+  "Petitioner'sDaytimeTelephoneNumber": "申请人的白天电话号码",
+  "Petitioner'sMobileTelephoneNumber": "申请人的手机号码（如有）",
+  "Petitioner'sEmailAddress": "申请人的电子邮件地址（如有）",
+
+  "Petitioner'sDeclarationAndCertification": "申请人的声明和认证",
+  "Petitioner'sDeclarationAndCertificationContent": "我提交的任何文件的副本都是未经修改的原始文件的准确复印件，我理解USCIS可能要求我在以后向USCIS提交原始文件。此外，我授权USCIS从我的任何记录中释放任何信息，以确定我寻求的移民福利的资格。我进一步授权在必要时将此申请、支持文件和我的USCIS记录中的信息释放给其他实体和人员，以便执行和实施美国移民法。我理解USCIS可能要求我出席一个预约，以采集我的生物特征（指纹、照片和/或签名），并且在那时，如果我需要提供生物特征，我将被要求宣誓确认：1）我提供或授权了此申请中包含的所有信息；2）我已审查并理解此申请中包含的所有信息；3）所有这些信息在提交时都是完整、真实和正确的。我在此声明，在伪证罪的处罚下，我的申请和随附文件中的所有信息都是由我提供或授权的，我已审查并理解所有包含在申请和随附文件中的信息，并且所有这些信息在提交时都是完整、真实和正确的。",
+
+  "Petitioner'sSignature": "申请人的签名",
+  "Petitioner'sSignatureSignInInk": "申请人的签名（用墨水签名）",
+  "DateOfSignature": "签名日期（mm/dd/yyyy）",
+  "NOTETOALLPETITIONERS": "注意所有申请人：如果你没有完全填写此申请表或未能提交说明书中列出的所需文件，USCIS可能会拒绝你的申请。",
+
+  "Interpreter'sContactInformationCertificationAndSignature": "翻译人员的联系信息、认证和签名",
+  "ProvideInterpreterInformation": "如果你使用了翻译人员，请提供以下信息。",
+  "Interpreter'sFullName": "翻译人员的全名",
+  "Interpreter'sFamilyName": "翻译人员的姓（姓氏）",
+  "Interpreter'sGivenName": "翻译人员的名（名字）",
+  "Interpreter'sBusinessOrOrganizationName": "翻译人员的公司或组织名称（如有）",
+
+  "Interpreter'sMailingAddress": "翻译人员的邮寄地址",
+  "Interpreter'sContactInformation": "翻译人员的联系信息",
+  "Interpreter'sDaytimeTelephoneNumber": "翻译人员的白天电话号码",
+  "Interpreter'sMobileTelephoneNumber": "翻译人员的手机号码（如有）",
+  "Interpreter'sEmailAddress": "翻译人员的电子邮件地址（如有）",
+
+  "Interpreter'sCertification": "翻译人员的认证",
+  "Interpreter'sCertificationContent": "我在伪证罪的处罚下证明：我精通英语和第6部分第1.b.项中提供的语言，并且我已用指定语言向申请人朗读了此申请表上的每个问题和说明以及他或她对每个问题的回答。申请人告诉我，他或她理解申请表上的每个说明、问题和回答，包括申请人的声明和认证，并已核实每个回答的准确性。",
+
+  "Interpreter'sSignature": "翻译人员的签名",
+  "Interpreter'sSignatureSignInInk": "翻译人员的签名（用墨水签名）",
+
+  "InformationOfPersonPreparingThisPetitionIfOtherThanThePetitioner": "如果不是申请人，请提供准备此申请的人的联系信息、声明和签名",
+  "ProvideInformationAboutPreparer.": "请提供以下关于准备人的信息。",
+  "Preparer'sFullName": "准备人的全名",
+  "Preparer'sFamilyName": "准备人的姓（姓氏）",
+  "Preparer'sGivenName": "准备人的名（名字）",
+  "Preparer'sBusinessOrOrganizationName": "准备人的公司或组织名称（如有）",
+
+  "Preparer'sMailingAddress": "准备人的邮寄地址",
+  "Preparer'sContactInformation": "准备人的联系信息",
+  "Preparer'sDaytimeTelephoneNumber": "准备人的白天电话号码",
+  "Preparer'sMobileTelephoneNumber": "准备人的手机号码（如有）",
+  "Preparer'sEmailAddress": "准备人的电子邮件地址（如有）",
+
+  "Preparer'sStatement": "准备人的声明",
+  "Preparer'sStatementOption7a": "我不是律师或认可的代表，但在申请人的同意下为其准备了此申请。",
+  "Preparer'sStatementOption7B": "我是律师或认可的代表，我对申请人的代理仅限于准备此申请",
+  "NoteOfPreparer'sStatement": "注意：如果你是律师或认可的代表，并且你的代理超出了准备此申请的范围，你可能需要随此申请提交一份完整的G-28表格，通知律师或认可的代表的出庭通知。",
+
+  "Preparer'sCertification": "准备人的认证",
+  "Preparer'sCertificationContent": "通过我的签名，我在伪证罪的处罚下证明，我在申请人的要求下准备了此申请。申请人随后审查了此完成的申请，并告诉我他或她理解申请表上的所有信息，包括申请人的声明和认证，并且所有这些信息都是完整、真实和正确的。我仅根据申请人提供给我的信息或授权我获取或使用的信息完成了此申请。",
+
+  "Preparer'sSignature": "准备人的签名",
+  "Preparer'sSignatureSignInInk": "准备人的签名（用墨水签名）",
+
+  "AdditionalInformationContent": "如果你需要额外的空间来提供此申请中的任何其他信息，请使用下面的空间。如果你需要比提供的空间更多的空间，你可以复制此页面并随申请一起提交，或附上一张单独的纸张。在每张纸的顶部打印或书写你的名字和A号码（如有）；指明你的回答所指的页码、部分号码和项目号码；并在每张纸上签名和注明日期。",
+  "PageNumber": "页码",
+  "PartNumber": "部分号码",
+  "ItemNumber": "项目号码",
 
   "RaceOptions": [
     "美洲印第安人或阿拉斯加土著",
